@@ -506,6 +506,12 @@ struct scst_tgt *scst_register_target(struct scst_tgt_template *vtt,
 	} else {
 		static int tgt_num; /* protected by scst_mutex */
 
+		PRINT_WARNING("Usage of autogenerated SCST target names "
+			"is deprecated and will be removed in one of the next "
+			"versions. It is strongly recommended to update target "
+			"driver %s to use hardware related persistent target "
+			"names instead", vtt->name);
+
 		tgt->tgt_name = kasprintf(GFP_KERNEL, "%s%s%d", vtt->name,
 			SCST_DEFAULT_TGT_NAME_SUFFIX, tgt_num);
 		if (tgt->tgt_name == NULL) {
