@@ -20,6 +20,8 @@ Summary of changes between versions 2.0.0 and 2.1.0
    to prevent possible starvation under heavy load and in some cases
    improve performance
 
+ - Autogenerated SCST target names made deprecated
+
  - Custom parse improvements
 
  - Logging improvements
